--- a/estilos.css
+++ b/estilos.css
@@ -1,16 +1,24 @@
 /* styles.css */
 body {
-    font-family: Arial, sans-serif;
+    font-family: 'Arial', sans-serif;
 }
 
 header {
-    background-color: #007bff; /* Color principal de Bootstrap */
+    background-color: #6c757d;
 }
 
 footer {
-    background-color: #343a40; /* Color oscuro de Bootstrap */
+    background-color: #343a40;
 }
 
 .card {
     margin-bottom: 1rem;
+}
+
+h2 {
+    color: #007bff;
+}
+
+form .form-control {
+    border-radius: 0.25rem;
 }
