--- a/estilos.css
+++ b/estilos.css
@@ -1,4 +1,15 @@
 /* styles.css */
+
+.card-img-top {
+    max-height: 200px;
+    object-fit: cover;
+}
+
+.carousel-item img {
+    max-height: 300px;
+    object-fit: cover;
+}
+
 body {
     font-family: 'Arial', sans-serif;
 }
@@ -16,7 +27,7 @@ footer {
 }
 
 h2 {
-    color: #007bff;
+    color: #A9A9A9;
 }
 
 form .form-control {
